--- a/contact.css
+++ b/contact.css
@@ -5,6 +5,11 @@
     box-sizing: border-box;
 }
 
+html {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     margin: 0;
     line-height: normal;
@@ -27,9 +32,10 @@ body {
 
 .contact-hero {
     align-self: stretch;
-    min-height: 850px;
+    min-height: auto;
     position: relative;
     overflow: visible;
+    padding-bottom: 120px;
 }
 
 /* Decorative Background */
@@ -37,7 +43,7 @@ body {
     width: 1892px;
     height: 1503px;
     left: -420px;
-    top: -74px;
+    top: 0px;
     position: absolute;
 }
 
@@ -183,9 +189,9 @@ body {
 
 /* Contact Header */
 .contact-header {
-    position: absolute;
-    left: 42px;
-    top: 183px;
+    position: relative;
+    margin-left: 42px;
+    margin-top: 183px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -214,10 +220,10 @@ body {
 
 /* Contact Content Area */
 .contact-content {
-    position: absolute;
-    left: 40px;
-    top: 345px;
-    right: 40px;
+    position: relative;
+    margin-left: 40px;
+    margin-right: 40px;
+    margin-top: 60px;
     display: flex;
     gap: 20px;
     align-items: flex-start;
